gitops/apps/open-webui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  labels:
    name: open-webui
    app.kubernetes.io/name: open-webui
